--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,7 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
    
-<link rel="stylesheet" href="/public/css/index.css">  
+<link rel="stylesheet" href="../public/css/index.css">  
     <meta charset="utf-8">
     <title>Credifier</title>
 
@@ -81,6 +81,7 @@
         </div>
 
         <div class="content"> 
+          <div class="row"></div>
             
         </div>
 
@@ -92,11 +93,11 @@
           <div class="logo-icons">
             <h2 class="navbar-brand" href="#">Credifier</h2>
             <div class="socialmedia-icons">
-              <a href="#"><img src="/public/images/icon-facebook.svg" alt="FB"></a>
-              <a href="#"><img src="/public/images/icon-youtube.svg" alt="YT"></a>
-              <a href="#"><img src="/public/images/icon-twitter.svg" alt="Twitter"></a>
-              <a href="#"><img src="/public/images/icon-pinterest.svg" alt="Pintrest"></a>
-              <a href="#"><img src="/public/images/icon-instagram.svg" alt="IG"></a>
+              <a href="#"><img src="../public/images/icon-facebook.svg" alt="FB"></a>
+              <a href="#"><img src="../public/images/icon-youtube.svg" alt="YT"></a>
+              <a href="#"><img src="../public/images/icon-twitter.svg" alt="Twitter"></a>
+              <a href="#"><img src="../public/images/icon-pinterest.svg" alt="Pintrest"></a>
+              <a href="#"><img src="../public/images/icon-instagram.svg" alt="IG"></a>
             </div>
           </div>
           <div class="info">
@@ -120,7 +121,7 @@
   
 
 </body>
-<script type="text/javascript" src="index.js" charset="utf-8"></script>
+<script type="text/javascript" src="../index.js" charset="utf-8"></script>
 </html>
 
 <!-- sourcesanspro -->
