--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,14 @@
 * {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: inline-block;
+}
 /* 
 Navigation Bar */
 
@@ -96,33 +104,39 @@ Navigation Bar */
     
 }
 
+
+/* Home page */
 .articles {
     padding: 5% 100px;
 }
 
-/* Article Cards */
 
 .row {
     padding: 5%;
     justify-content: center;
 }
+
+.content {
+    overflow: hidden;
+}
 .card {
     width: fit-content;
-    height: 270px;
+    height: 320px;
     overflow: hidden;
     margin: 2%;
     padding: 0;
-    
+    background-color: #131313;;
+    color: white;
 }
 
 .card:hover {
     cursor: pointer;
-    color: #184d47;
+    color: #83b6b3;
 }
 
 .card img {
     width: 100%;
-    height: auto;
+    height: 200px;
 }
 
 .card-title {
@@ -141,7 +155,57 @@ Navigation Bar */
 
 }
 
+/* Article show page  */
+.article-container {
+    justify-content: center;
+    text-align: center;
+    padding: 2px 16px;
+}
 
+.article-card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    text-align: left;
+    margin: 2% 2% 12%;
+}
+
+.article-card img {
+    width: 100%;
+}
+
+.article-container h1 {
+    font-weight: 800;
+    font-size: 5rem;
+}
+
+.article-content {
+    margin: 10%;
+}
+.article-card h2 {
+    width: 15ch;
+    overflow: hidden;
+    white-space: nowrap;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.article-icons {
+    display: inline;
+    width: 20%;
+    float: right;
+    margin-right: 1%;
+    margin-top: 3%;
+    text-align: right !important;
+
+}
+
+.article-icons i {
+    margin-right: 20% !important;
+}
+
+.article-card i {
+    margin: 2%;
+}
 /* Footer Section */
 .footer-container {
     background-color:black;
@@ -192,3 +256,4 @@ Navigation Bar */
     font-size: 1rem;
 }
   
+
