--- a/views/homepage.html
+++ b/views/homepage.html
@@ -39,8 +39,8 @@
               </div>
 
               <div class="navbarnav ml-auto">
-                <button class="btn btn-outline-warning" type="button"> Sign up</button>
-                <button class="btn btn-outline-light" type="button">Login</button>
+                <button class="btn btn-outline-warning signup-btn" type="button"> Sign up</button>
+                <button class="btn btn-outline-light login-btn" type="button">Login</button>
               </div>
 
             </div>
