--- a/public/css/index.css
+++ b/public/css/index.css
@@ -86,7 +86,7 @@ Navigation Bar */
     background-color: #f4f4f4;
 }
 
-#drop-drowns {
+#drop-downs {
     text-align: center;
     padding: 2%;
 }
