--- a/views/homepage.html
+++ b/views/homepage.html
@@ -41,6 +41,7 @@
               <div class="navbarnav ml-auto">
                 <button class="btn btn-outline-warning signup-btn" type="button"> Sign up</button>
                 <button class="btn btn-outline-light login-btn" type="button">Login</button>
+                <button class="btn btn-outline-light logout-btn hide" type="button">Signout</button>
               </div>
 
             </div>
@@ -58,7 +59,7 @@
     </section>
 
     <section id="main">
-        <div id="drop-drowns">
+        <div id="drop-downs">
 
             <div class="dropdown">
                 <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
