--- a/public/css/index.css
+++ b/public/css/index.css
@@ -288,19 +288,24 @@ Navigation Bar */
     color: red;
 }
 
-
+.review-rating {
+    font-size: 1rem;
+}
 .green {
     border: 10px solid green;
     box-shadow: 0 0 10px #000000;
+    
 }
 
 
 .red {
     border: 10px solid red;
+    box-shadow: 0 0 10px #000000;
 }
 
 .yellow {
     border: 10px solid yellow;
+    box-shadow: 0 0 10px #000000;
 }
 
 /* Footer Section */
@@ -426,8 +431,8 @@ Navigation Bar */
     display: inline-block;
     text-transform: uppercase;
     font-size: 13px;
-    -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-    box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+    -webkit-box-shadow: 0 10px 30px 0 black;
+    box-shadow: 0 10px 30px 0 black;
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 20px 40px 20px;
@@ -439,7 +444,7 @@ Navigation Bar */
   }
   
   input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #47b39b;
+    background-color: black;
   }
   
   input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -450,7 +455,7 @@ Navigation Bar */
     transform: scale(0.95);
   }
   
-  input[type=text] {
+  .login-input {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -550,6 +555,7 @@ Navigation Bar */
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
+
   }
   
   .fadeIn.fourth {
